--- a/Python UET/TH2_CS3.ipynb
+++ b/Python UET/TH2_CS3.ipynb
@@ -155,6 +155,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "0a7da12a-cb95-4a29-a37d-7caeae5926d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " a\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n",
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "#W2A6\n",
+    "char = input()\n",
+    "print(ord(char))\n",
+    "\n",
+    "print(chr(ord(char) - 32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b7825261-f696-4a06-9f00-e62069bd6a34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "512\n",
+      "512\n"
+     ]
+    }
+   ],
+   "source": [
+    "#W2A7\n",
+    "A = ((13**2)*3) + 5\n",
+    "B = 13**2*3 +5\n",
+    "print(A)\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d831d49d-ff84-4201-bdb7-1984e99b75ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53.60\n"
+     ]
+    }
+   ],
+   "source": [
+    "#W2A8\n",
+    "c = int(input())\n",
+    "f = 9/5*c + 32\n",
+    "print(f'{f:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0a94bf6f-2c5f-423a-b62b-89feb7a86c88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "#W2A9\n",
+    "x = int(input())\n",
+    "sum = x+ x*0.3 + x*0.1 + 10\n",
+    "print(f'{sum:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "0f6ab5ae-9ae3-4b9e-91d3-f4582b84cf38",
    "metadata": {},
@@ -179,6 +288,82 @@
     "a, b, c = input().split()\n",
     "print('Yo ', c, ', ', b, ' and ', a, sep = '')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b668e099-a0ff-43fd-840c-76288cafd061",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 10/5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36300\n"
+     ]
+    }
+   ],
+   "source": [
+    "#W2A11\n",
+    "h, m = map(int, input().split('/'))\n",
+    "s = h*3600 + m*60\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec6a1f3d-8187-4f6c-b556-dced28de929b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#W2A12\n",
+    "n = int(input())\n",
+    "s = n*n*6\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5d199a6c-7bee-4e8d-923c-68de2f5003ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 12 15\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#WA13\n",
+    "a, b = map(int, input().split())\n",
+    "print(a*b%10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98796e4c-e84f-4da0-b295-ed56f1eed811",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
